--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Thereisnotruth/thereisnotruth.github.io/issues"
   },
-  "homepage": "https://github.com/Thereisnotruth/thereisnotruth.github.io#readme"
+  "homepage": "https://github.com/Thereisnotruth/thereisnotruth.github.io#readme",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "highlight.js": "^11.5.1",
+    "markdown-it": "^12.3.2"
+  }
 }
