--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "- 진행상황 : https://cookie-barracuda-cbe.notion.site/662f667fa6684dbda3cb9fb090277671",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,9 @@
     "ejs": "^3.1.6",
     "highlight.js": "^11.5.1",
     "markdown-it": "^12.3.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
