--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "thereisnotruth.github.io",
   "version": "1.0.0",
+  "type": "module",
   "description": "- 진행상황 : https://cookie-barracuda-cbe.notion.site/662f667fa6684dbda3cb9fb090277671",
   "main": "index.js",
   "scripts": {
@@ -21,10 +22,6 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "highlight.js": "^11.5.1",
-    "markdown-it": "^12.3.2"
-  },
-  "devDependencies": {
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "marked": "^4.0.14"
   }
 }
