--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "thereisnotruth.github.io",
   "version": "1.0.0",
-  "type": "module",
   "description": "- 진행상황 : https://cookie-barracuda-cbe.notion.site/662f667fa6684dbda3cb9fb090277671",
   "main": "index.js",
   "scripts": {
@@ -21,6 +20,7 @@
   "homepage": "https://github.com/Thereisnotruth/thereisnotruth.github.io#readme",
   "dependencies": {
     "ejs": "^3.1.6",
+    "express": "^4.17.3",
     "highlight.js": "^11.5.1",
     "marked": "^4.0.14"
   }
