--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
     "gh-pages": "^3.2.3",
+    "prism-react-renderer": "^1.3.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
