--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^4.3.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.12.1",
@@ -15,8 +16,10 @@
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-remark-images": "^6.14.0",
     "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.12.1",
     "gh-pages": "^3.2.3",
     "prism-react-renderer": "^1.3.1",
