--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-sitemap": "^5.24.0",
     "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-remark-images": "^6.14.0",
     "gatsby-source-filesystem": "^4.12.1",
@@ -36,7 +37,7 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "deploy": "gatsby build && gh-pages -d public -b deploy",
+    "deploy": "gatsby build && gh-pages -d public -b deploy && cp googlec03cb55466787c4a.html public/",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
